idf_component_register(SRCS "lib/src/google/protobuf/any_lite.cc"
                            "lib/src/google/protobuf/any.pb.cc"
                            "lib/src/google/protobuf/api.pb.cc"
                            "lib/src/google/protobuf/arena.cc"
                            "lib/src/google/protobuf/arenastring.cc"
                            "lib/src/google/protobuf/descriptor.cc"
                            "lib/src/google/protobuf/descriptor_database.cc"
                            "lib/src/google/protobuf/descriptor.pb.cc"
                            "lib/src/google/protobuf/duration.pb.cc"
                            "lib/src/google/protobuf/dynamic_message.cc"
                            "lib/src/google/protobuf/empty.pb.cc"
                            "lib/src/google/protobuf/extension_set.cc"
                            "lib/src/google/protobuf/extension_set_heavy.cc"
                            "lib/src/google/protobuf/field_mask.pb.cc"
                            "lib/src/google/protobuf/generated_enum_util.cc"
                            "lib/src/google/protobuf/generated_message_reflection.cc"
                            "lib/src/google/protobuf/generated_message_tctable_lite.cc"
                            "lib/src/google/protobuf/generated_message_util.cc"
                            "lib/src/google/protobuf/implicit_weak_message.cc"
                            "lib/src/google/protobuf/map.cc"
                            "lib/src/google/protobuf/map_field.cc"
                            "lib/src/google/protobuf/message_lite.cc"
                            "lib/src/google/protobuf/parse_context.cc"
                            "lib/src/google/protobuf/reflection_ops.cc"
                            "lib/src/google/protobuf/repeated_field.cc"
                            "lib/src/google/protobuf/repeated_ptr_field.cc"
                            "lib/src/google/protobuf/service.cc"
                            "lib/src/google/protobuf/source_context.pb.cc"
                            "lib/src/google/protobuf/struct.pb.cc"
                            "lib/src/google/protobuf/text_format.cc"
                            "lib/src/google/protobuf/timestamp.pb.cc"
                            "lib/src/google/protobuf/type.pb.cc"
                            "lib/src/google/protobuf/unknown_field_set.cc"
                            "lib/src/google/protobuf/wire_format_lite.cc"
                            "lib/src/google/protobuf/wrappers.pb.cc"
                            "lib/src/google/protobuf/stubs/common.cc"
                            "lib/src/google/protobuf/stubs/int128.cc"
                            "lib/src/google/protobuf/stubs/status.cc"
                            "lib/src/google/protobuf/stubs/statusor.cc"
                            "lib/src/google/protobuf/stubs/stringpiece.cc"
                            "lib/src/google/protobuf/stubs/stringprintf.cc"
                            "lib/src/google/protobuf/stubs/structurally_valid.cc"
                            "lib/src/google/protobuf/stubs/strutil.cc"
                            "lib/src/google/protobuf/stubs/substitute.cc"
                            "lib/src/google/protobuf/stubs/time.cc"
                            "lib/src/google/protobuf/io/coded_stream.cc"
                            "lib/src/google/protobuf/io/gzip_stream.cc"
                            "lib/src/google/protobuf/io/printer.cc"
                            "lib/src/google/protobuf/io/strtod.cc"
                            "lib/src/google/protobuf/io/tokenizer.cc"
                            "lib/src/google/protobuf/io/zero_copy_stream.cc"
                            "lib/src/google/protobuf/io/zero_copy_stream_impl_lite.cc"
                    INCLUDE_DIRS "lib/src"
                    REQUIRES pthread)

set_target_properties(${COMPONENT_LIB} PROPERTIES COMPILE_FLAGS "-Wno-maybe-uninitialized -DHAVE_PTHREAD")

set_source_files_properties("lib/src/google/protobuf/arena.cc"
    PROPERTIES COMPILE_FLAGS
    -Wno-missing-field-initializers
)
