[package]
name = "examples"
version = "0.1.0"
authors = ["Tom Lauwaerts <tom.lauwaerts@ugent.be>"]
edition = "2018"

[lib]
path = "main/main.rs"
crate-type = ["cdylib"]

[dependencies]
warduino = { path = "../../lib/warduino" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 3
debug = true
